vlib/v/parser/tests/chan_no_type_err.out
vlib/v/parser/tests/chan_no_type_err.vv:1:6: error: `chan` has no type specified. Use `chan Type{}` instead of `chan{}`
    1 | a := chan{}
      |      ~~~~~~
